# 30Days30Agents

./: .roomodes  LICENSE  README.md  agent-frameworks.md  custom-modes-guide.md  daily-progress-tracker.md
agents/Day-01-Personal-Assistant/app/: .env.example  .gitignore  README.md  __init__.py  agent.py  cli.py  config.py  interface_adapter.py  langgraph_memory.py  main.py  memory.py  pyproject.toml  run_telegram_bot.sh  streamlit_app.py  telegram_bot.py
agents/Day-01-Personal-Assistant/app/chains/: __init__.py  entity_extraction.py  execution_planner.py  intent_classification.py
agents/Day-01-Personal-Assistant/app/data/: user_preferences.json
agents/Day-01-Personal-Assistant/app/docs/: telegram_setup.md
agents/Day-01-Personal-Assistant/app/prompts/: __init__.py  base_prompts.py
agents/Day-01-Personal-Assistant/app/tests/: __init__.py  conftest.py  test_agent_exa.py  test_edge_cases.py  test_end_to_end_flows.py  test_entity_extraction.py  test_exa_search_tool.py  test_intent_classification.py  test_langgraph_memory.py  test_memory_persistence.py  test_performance.py  test_todoist_tool.py  test_weather_tool.py  test_wikipedia_tool.py
agents/Day-01-Personal-Assistant/app/tools/: __init__.py  exa_search_tool.py  news_tool.py  todoist_tool.py  weather_tool.py  wikipedia_tool.py
agents/Day-02-Research-Assistant/app/: .env.example  README.md  main.py  pyproject.toml
agents/Day-02-Research-Assistant/app/components/: error_handling.py  input_processing.py  knowledge_processing.py  output_formatting.py  research_workflow.py
agents/Day-02-Research-Assistant/app/core/: agent.py  config.py  langgraph_workflow.py
agents/Day-02-Research-Assistant/app/interface/: streamlit_app.py
agents/Day-02-Research-Assistant/app/tests/: __init__.py
agents/Day-02-Research-Assistant/app/tools/: browsing_tools.py  document_loaders.py  search_tools.py
agents/Day-04-Writing-Assistant/app/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  run.py  run_tests.py
agents/Day-04-Writing-Assistant/app/api/: deps.py
agents/Day-04-Writing-Assistant/app/core/: __init__.py  config.py  security.py
agents/Day-04-Writing-Assistant/app/db/: __init__.py  database.py
agents/Day-04-Writing-Assistant/app/models/: __init__.py  preferences.py
agents/Day-04-Writing-Assistant/app/routers/: __init__.py  drafting.py  grammar.py  models.py  preferences.py  summarization.py  tone.py
agents/Day-04-Writing-Assistant/app/services/: __init__.py  models_service.py  openrouter_service.py  preferences_service.py
agents/Day-04-Writing-Assistant/app/tests/: __init__.py  conftest.py  test_deps.py  test_openrouter.py  test_preferences_api.py  test_preferences_service.py  test_security.py  test_utils.py
agents/Day-04-Writing-Assistant/app/utils/: __init__.py  generate_api_key.py  logging_config.py
agents/Day-05-Data-Analysis-Agent/app/: .env.example  README.md  __init__.py  main.py  openrouter_client.py  pyproject.toml  sample_data.csv  utils.py
agents/Day-05-Data-Analysis-Agent/app/config/: settings.py
agents/Day-05-Data-Analysis-Agent/app/core/: agent.py  llm.py
agents/Day-05-Data-Analysis-Agent/app/data/: csv_handler.py  sql_handler.py  visualization.py
agents/Day-05-Data-Analysis-Agent/app/scripts/: create_test_db.py
agents/Day-05-Data-Analysis-Agent/app/ui/: components.py
agents/Day-05-Data-Analysis-Agent/app/utils/: helpers.py
agents/Day-05-Data-Analysis-Agent/backend/: .env.example  .gitignore  README.md  pyproject.toml
agents/Day-05-Data-Analysis-Agent/backend/app/: __init__.py  config.py  main.py
agents/Day-06-Learning-Coach/backend/: .env.example  .gitignore  README.md  pyproject.toml  run.py
agents/Day-06-Learning-Coach/backend/app/: __init__.py  main.py
agents/Day-06-Learning-Coach/backend/tests/: __init__.py  test_main.py
agents/Day-07-Task-Automation-Agent/app/: .env.example  README.md  cli.py  main.py  pyproject.toml  setup.py
agents/Day-07-Task-Automation-Agent/app/examples/: beehive_mcp_example.py  file_operations.py  web_monitor.py
agents/Day-07-Task-Automation-Agent/app/scripts/: generate_example_dataset.py  run_evals.py
agents/Day-07-Task-Automation-Agent/app/src/: __init__.py  eval_beehive.py  main.py
agents/Day-07-Task-Automation-Agent/app/tests/: test_beehive_mcp.py
agents/Day-10-Travel-Planner/travel-agent/: README.md  agent.py  app.py  pyproject.toml  travel_tools.py
agents/Day-12-News-Curator/news-agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/Day-12-News-Curator/news-agent/docs/: mcp-python.md
agents/Day-12-News-Curator/news-agent/news_agent/: agent.py  cli.py  config.py  interactive.py  logging.py  models.py  run_interactive.py
agents/Day-13-Social-Media-Manager/digi-persona/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/Day-13-Social-Media-Manager/digi-persona/app/: main.py
agents/Day-13-Social-Media-Manager/digi-persona/docs/: detailed-plan.md  docker-setup.md  frontend-implementation.md  implementation-plan.md  initial-plan.md  next-steps.md  (+2 more)
agents/Day-14-Email-Assistant/email-assist/: .env.example  .gitignore  README.md  agent-spec.md  main.py  pyproject.toml
agents/Day-18-Language-Translation-Agent/TranslationAgent/: .replit  README.md  app.py  language_utils.py  pyproject.toml  translator.py
agents/Day-19-Document-Analyzer/app/: README.md  api.py  main.py  pyproject.toml
agents/Day-20-Meeting-Assistant/app/: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION.md  README.md  T4.2_IMPLEMENTATION_SUMMARY.md  TASK_PLANNER.md  alembic.ini  demo_meeting_api.py  main.py  pyproject.toml  test_chunking.py  test_database.py  test_upload_endpoints.py
agents/Day-22-E-commerce-Assistant/app/: README.md  config.env.example  demo.py  main.py  pydantic_demo.py  pyproject.toml
agents/Day-23-Job-Search-Assistant/career-assistant/: .gitignore  QUICKSTART.md  README.md  agent.py  document_processor.py  env_example.txt  main.py  models.py  pyproject.toml  setup_mcp.py  streamlined_cli.py  utils.py
(+689 files in other folders)
