[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.16",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.0",
    "tabulate>=0.9.0",
]
