[project]
name = "news-agent"
version = "0.1.0"
description = "News curator agent using PydanticAI and FreshRSS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai>=0.1.0",
    "pydantic-ai-slim[mcp]>=0.1.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
