[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digi-persona"
version = "0.1.0"
description = "A platform for creating and managing multiple virtual personas with social media presence powered by AI"
readme = "README.md"
authors = [
    {name = "Digi-Persona Team", email = "info@digi-persona.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "pydantic>=1.10.7",
    "sqlalchemy>=2.0.9",
    "alembic>=1.10.3",
    "psycopg2-binary>=2.9.6",
    "openai>=0.27.4",
    "langchain>=0.0.267",
    "langchain-openai>=0.0.2",
    "chromadb>=0.4.13",
    "tiktoken>=0.4.0",
    "faiss-cpu>=1.7.4",
    "tweepy>=4.14.0",
    "linkedin-api>=2.0.0",
    "atproto>=0.0.1",
    "celery>=5.2.7",
    "redis>=4.5.4",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.2.2",
    "pydantic-settings>=2.0.0",
    "prometheus-client>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
