[project]
name = "email-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.3",
    "anthropic>=0.51.0",
    "google-api-python-client>=2.169.0",
    "google-auth-oauthlib>=1.2.2",
    "microsoftgraph-python>=1.1.8.1",
    "msal>=1.32.3",
    "openai>=1.81.0",
    "streamlit>=1.45.1",
]
