[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gtts>=2.5.4",
    "langdetect>=1.0.9",
    "openai>=1.82.0",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.98",
    "speechrecognition>=3.14.3",
    "streamlit>=1.45.1",
]
