[project]
name = "documentanalyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "magika>=0.6.2",
    "markitdown-mcp>=0.0.1a3",
    "markitdown[all]>=0.1.1",
    "onnxruntime>=1.22.0",
    "pydantic-ai>=0.2.11",
    "python-dotenv>=1.1.0",
]
