[project]
name = "shoppingassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rakesh Gangwar", email = "mail@rakeshgangwar.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "lxml[html-clean]>=5.4.0",
    "openai>=1.82.1",
    "pydantic>=2.11.5",
    "pydantic-ai-slim[openai]>=0.2.12",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "requests-html>=0.10.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopping_assistant"]
